manifest/objects/LVGO__Estimated_Enrollment_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>LVGO__Estimated_Enrollment__c</fullName>
        <label>Estimated Enrollment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Opp_Owner_Role__c</fullName>
        <label>Opp Owner Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Program_Family__c</fullName>
        <label>Program Family</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Estimated Enrollment Mapping</label>
    <listViews>
        <fullName>LVGO__All_Records</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>LVGO__Opp_Owner_Role__c</columns>
        <columns>LVGO__Estimated_Enrollment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LVGO__All_x</fullName>
        <columns>MasterLabel</columns>
        <columns>LVGO__Program_Family__c</columns>
        <columns>LVGO__Opp_Owner_Role__c</columns>
        <columns>LVGO__Estimated_Enrollment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Estimated Enrollment Mappings</pluralLabel>
</CustomObject>